--- a/index.html
+++ b/index.html
@@ -13,10 +13,7 @@
    <!--    Favicons-->
    <!-- ===============================================-->
    <!-- <link rel="apple-touch-icon" sizes="180x180" href="assets/img/favicons/apple-touch-icon.png"> -->
-
-   <link rel="icon" href="assets/img/favicons/cropped-Brasao-02-32x32.png" sizes="32x32" />
-   <link rel="icon" href="assets/img/favicons/cropped-Brasao-02-192x192.png" sizes="192x192" />
-   <link rel="apple-touch-icon" href="assets/img/favicons/cropped-Brasao-02-180x180.png" />
+   <link rel="shortcut icon" href="assets/img/favicons/favicon.png" type="image/x-icon" />
    <!-- <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicons/favicon-32x32.png">
    <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicons/favicon-16x16.png">
    <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicons/favicon.ico"> -->
@@ -95,11 +92,10 @@
                   <!--/.bg-holder-->
                   <div class="col-10 col-sm-8 col-md-9 z-index-1">
                      <h1 class="text-white fs-2 fs-sm-4 fs-xl-5 display-4">
-                        <center><img width="400" class="img-fluid" src="assets/img/logo_pmn.png"></img>
-                           <br> Portal do Contribuinte
+                        <center><img width="400" class="img-fluid" src="assets/img/logo.png"></img>
+                           <br><br> Portal do Contribuinte
                      </h1>
                      </center>
-                     <!--<h5 class="fs-0 fs-sm-1 mt-3 mt-md-5 text-white">Texto Auxiliar</h5>-->
                   </div>
                </div>
             </div>
@@ -160,58 +156,7 @@
                      </a>
                   </div>
 
-                  <div class="col-6 col-sm-3 minh-25vh  sidebar-item-wrapper py-5" data-content="#">
-                     <div class="bg-holder" style="background-image:url(assets/img/navigation/5.jpg);">
-                     </div>
-                     <!--/.bg-holder-->
-                     <a href="https://nilopolis.sigcartorios.com.br/" target="blank">
-                        <div class="sidebar-item">
-                           <i class="mb-2 mb-md-3 nav-icon fas fa-folder-open text-white" style="font-size:35px"
-                              aria-hidden="true"></i>
-                           <h2 class="font-weight-light text-white fs-1 fs-xl-2 ">SIG - Cartórios</h2>
-                        </div>
-                     </a>
-                  </div>
-
-                  <div class="col-6 col-sm-3 minh-25vh  sidebar-item-wrapper py-5" data-content="#">
-                     <div class="bg-holder" style="background-image:url(assets/img/navigation/6.jpg);">
-                     </div>
-                     <!--/.bg-holder-->
-                     <a href="https://nilopolis.sigbancos.com.br/" target="blank">
-                        <div class="sidebar-item">
-                           <i class="mb-2 mb-md-3 nav-icon fas fa-university text-white" style="font-size:35px"
-                              aria-hidden="true"></i>
-                           <h2 class="font-weight-light text-white fs-1 fs-xl-2 ">SIG - Bancos</h2>
-                        </div>
-                     </a>
-                  </div>
-
-                  <div class="col-6 col-sm-3 minh-25vh  sidebar-item-wrapper py-5" data-content="#">
-                     <div class="bg-holder" style="background-image:url(assets/img/navigation/7.jpg);">
-                     </div>
-                     <!--/.bg-holder-->
-                     <a href="https://pmnilopolis.geosiap.net.br/pmnilopolis/websis/siapegov/arrecadacao/baw/veracidade_certidao.php"
-                        target="blank">
-                        <div class="sidebar-item">
-                           <i class="mb-2 mb-md-3 nav-icon fas fa-check-circle text-white" style="font-size:35px"
-                              aria-hidden="true"></i>
-                           <h2 class="font-weight-light text-white fs-1 fs-xl-2 ">Veracidade de Certidão</h2>
-                        </div>
-                     </a>
-                  </div>
-
-                  <div class="col-6 col-sm-3 minh-25vh  sidebar-item-wrapper py-5" data-content="#">
-                     <div class="bg-holder" style="background-image:url(assets/img/navigation/8.jpg);">
-                     </div>
-                     <!--/.bg-holder-->
-                     <a href="https://nilopolis.rj.gov.br/decad/" target="blank">
-                        <div class="sidebar-item">
-                           <i class="mb-2 mb-md-3 nav-icon fas fa-user-check text-white" style="font-size:35px"
-                              aria-hidden="true"></i>
-                           <h2 class="font-weight-light text-white fs-1 fs-xl-2 ">DECAD</h2>
-                        </div>
-                     </a>
-                  </div>
+   
 
                   <div class="col-6 col-sm-3 minh-25vh  sidebar-item-wrapper py-5" data-content="#">
                      <div class="bg-holder" style="background-image:url(assets/img/navigation/9.jpg);">
@@ -1735,7 +1680,7 @@
                         <div class="row align-items-center">
                            <div class="col-lg-6 text-lg-left">
                               <p class="fs--1 text-uppercase ls font-weight-bold mb-0">
-                                 Copyright &copy; 2020 PMNI.
+                                 Copyright &copy; 2024 PMDQ.
                               </p>
                            </div>
                            <!--<div class="col-lg-6 text-lg-right mt-2 mt-lg-0">
