--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
          <div class="container-fluid p-0 minh-100vh">
             <div class="position-relative px-3 w-lg-50 position-lg-absolute" id="baseContent">
                <div class="row align-items-center minh-50vh justify-content-center py-5 minh-lg-100vh">
-                  <div class="bg-holder overlay overlay-1" style="background-image:url(assets/img/home-blur1.jpeg);">
+                  <div class="bg-holder overlay overlay-1" style="background-image:url(assets/img/caxias3.jpg);">
                   </div>
                   <!--/.bg-holder-->
                   <div class="col-10 col-sm-8 col-md-9 z-index-1">
@@ -106,11 +106,11 @@
                      </div>
                      <!--/.bg-holder-->
                      <div class="sidebar-item">
-                        <a href="https://pmnilopolis.geosiap.net.br/pmnilopolis/websis/siapegov/arrecadacao/2via/index.php"
+                        <a href="https://www.tributosnet.com.br/duquedecaxias/portal/Modulos/Home.aspx"
                            target="blank">
                            <i class="mb-2 mb-md-3 nav-icon fas fa-home text-white" style="font-size:35px"
                               aria-hidden="true"></i>
-                           <h2 class="font-weight-light text-white fs-1 fs-xl-2 ">2º Via - Tributos</h2>
+                           <h2 class="font-weight-light text-white fs-1 fs-xl-2 ">Tributos</h2>
                         </a>
                      </div>
                   </div>
@@ -119,10 +119,10 @@
                      </div>
                      <!--/.bg-holder-->
                      <div class="sidebar-item">
-                        <a href="https://nilopolis.sigiss.com.br/nilopolis/index.php" target="blank">
+                        <a href="https://www.issnetonline.com.br/duquedecaxias/online/Login/Login.aspx?ReturnUrl=%2Fduquedecaxias%2Fonline" target="blank">
                            <i class="mb-2 mb-md-3 nav-icon fas fa-file-signature text-white" style="font-size:35px"
                               aria-hidden="true"></i>
-                           <h2 class="font-weight-light text-white fs-1 fs-xl-2 ">NFe</h2>
+                           <h2 class="font-weight-light text-white fs-1 fs-xl-2 ">ISS</h2>
                         </a>
                      </div>
                   </div>
@@ -131,12 +131,12 @@
                      <div class="bg-holder" style="background-image:url(assets/img/navigation/3.jpg);">
                      </div>
                      <!--/.bg-holder-->
-                     <a href="https://pmnilopolis.geosiap.net.br/pmnilopolis/websis/siapegov/arrecadacao/itbi/itbi_login.php"
+                     <a href="https://www.notaeletronica.com.br/duquedecaxias/Login/Login_NFE.aspx"
                         target="blank">
                         <div class="sidebar-item">
                            <i class="mb-2 mb-md-3 nav-icon fas fa-handshake text-white" style="font-size:35px"
                               aria-hidden="true"></i>
-                           <h2 class="font-weight-light text-white fs-1 fs-xl-2 ">ITBI</h2>
+                           <h2 class="font-weight-light text-white fs-1 fs-xl-2 ">NFS-e</h2>
                         </div>
                      </a>
                   </div>
@@ -146,12 +146,12 @@
                      <div class="bg-holder" style="background-image:url(assets/img/navigation/4.jpg);">
                      </div>
                      <!--/.bg-holder-->
-                     <a href="https://pmnilopolis.geosiap.net.br/pmnilopolis/websis/siapegov/arrecadacao/baw/certidao.php"
+                     <a href="https://duquedecaxias.rj.gov.br/pagina/servicos/plantao-fiscal"
                         target="blank">
                         <div class="sidebar-item">
                            <i class="mb-2 mb-md-3 nav-icon fas fa-newspaper text-white" style="font-size:35px"
                               aria-hidden="true"></i>
-                           <h2 class="font-weight-light text-white fs-1 fs-xl-2 ">Certidões</h2>
+                           <h2 class="font-weight-light text-white fs-1 fs-xl-2 ">Plantão Fiscal</h2>
                         </div>
                      </a>
                   </div>
@@ -162,12 +162,12 @@
                      <div class="bg-holder" style="background-image:url(assets/img/navigation/9.jpg);">
                      </div>
                      <!--/.bg-holder-->
-                     <a href="https://pmnilopolis.geosiap.net.br/pmnilopolis/websis/siapegov/administrativo/gpro/protocolo_consulta.php"
+                     <a href="https://duquedecaxias.rj.gov.br/portal/boletim-oficial.html"
                         target="blank">
                         <div class="sidebar-item">
-                           <i class="mb-2 mb-md-3 nav-icon fas fa-newspaper text-white" style="font-size:35px"
+                           <i class="mb-2 mb-md-3 nav-icon fas fa-book text-white" style="font-size:35px"
                               aria-hidden="true"></i>
-                           <h2 class="font-weight-light text-white fs-1 fs-xl-2 ">Consulta de processos</h2>
+                           <h2 class="font-weight-light text-white fs-1 fs-xl-2 ">Boletim Oficial</h2>
                         </div>
                      </a>
                   </div>
@@ -177,12 +177,12 @@
                      <div class="bg-holder" style="background-image:url(assets/img/navigation/10.jpg);">
                      </div>
                      <!--/.bg-holder-->
-                     <a href="https://pmnilopolis.geosiap.net.br/pmnilopolis/websis/siapegov/administrativo/aten/aten_valida.php"
+                     <a href="http://protocolo.duquedecaxias.rj.gov.br:8004/consultapublica/index.php?class=ProcProcessoForm"
                         target="blank">
                         <div class="sidebar-item">
                            <i class="mb-2 mb-md-3 nav-icon fas fa-file-alt text-white" style="font-size:35px"
                               aria-hidden="true"></i>
-                           <h2 class="font-weight-light text-white fs-1 fs-xl-2 ">Processo Eletrônico</h2>
+                           <h2 class="font-weight-light text-white fs-1 fs-xl-2 ">Protocolo</h2>
                         </div>
                      </a>
                   </div>
@@ -1768,7 +1768,7 @@
       // Função para abrir o popup quando o balão do WhatsApp for clicado
       document.getElementById('iarah-chat-balloon').addEventListener('click', function () {
          // URL do WhatsApp que você deseja abrir
-         var whatsappUrl = 'https://api.whatsapp.com/send?phone=5521983212271';
+         var whatsappUrl = 'https://api.whatsapp.com/send?phone=5521987073501';
 
          // Largura e altura do popup
          var popupWidth = 450;
