--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 
 
                   <div class="col-6 col-sm-3 minh-25vh  sidebar-item-wrapper py-5" data-content="#">
-                     <div class="bg-holder" style="background-image:url(assets/img/navigation/11.jpg);">
+                     <div class="bg-holder" style="background-image:url(assets/img/navigation/5.jpg);">
                      </div>
                      <!--/.bg-holder-->
                      <a href="https://enotifica.novaiguacu.rj.gov.br/" target="blank">
